test/functions/bradc/arrayFormals/test_formal_rec_arg.good
In foo!
In foo!
test_formal_rec_arg.chpl:7: error: halt reached - Domain mismatch passing array argument:
  Formal domain is: {1..3, 1..3}
  Actual domain is: {0..2, 0..2}
